# github-stats-pages

./: .dockerignore  .flake8  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  action.yml  conftest.py  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: coverage.yml  create-release.yml  docker-action-check.yml  docker.yml  python-package.yml  readme-update.yml
github_stats_pages/: __init__.py  db.py  gts_run.py  logger.py  repo_list.py  stats_plots.py
github_stats_pages/models/: __init__.py  clone.py  paths.py  referrer.py  referring.py  traffic.py
github_stats_pages/templates/: about.html  index.html  page.html  repositories.html
github_stats_pages/templates/styles/: about.html
github_stats_pages/templates/styles/css/: style.css
scripts/: get_repo_list  gts_run_all_repos  make_stats_plots  merge-csv.sh  merge_csv  migrate_to_sqlite
templates/: page.html
templates/styles/: about.html  index.html  page.html
tests/: test_db.py  test_gts_run.py  test_logger.py  test_repo_list.py  test_stats_plots.py
tests_data/: merged_traffic.csv  repository.csv  sqlite3.db
tests_data/data/: merged_clone.csv  merged_paths.csv  merged_referrer.csv  merged_traffic.csv
