[metadata]
name = github-stats-pages
version = attr: github_stats_pages.__version__
description = "Retrieve statistics for a user's repositories and populate the information onto a GitHub static page"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
url = https://github.com/astrochun/github-stats-pages
project_urls =
    Tracker = https://github.com/astrochun/github-stats-pages/issues
    Source = https://github.com/astrochun/github-stats-pages
    Documentation = https://github.com/astrochun/github-stats-pages/blob/main/README.md
author = Chun Ly
author_email = astro.chun@gmail.com
maintainer = Chun Ly
maintainer_email = astro.chun@gmail.com

[options]
python_requires = >=3.7
zip_safe = False
include_package_data = True
install_requires =
    requests >= 2.22.0
    pandas == 1.2.4
    github-traffic-stats == 1.2.0
    Jinja2 == 3.0.3
    bokeh == 2.3.0
    markdown == 3.3.4
    PyGithub == 1.55
    tabulate == 0.8.7
scripts =
    scripts/get_repo_list
    scripts/gts_run_all_repos
    scripts/merge-csv.sh
    scripts/make_stats_plots
#package_dir=
#    =github_stats_pages
packages=
    github_stats_pages

[options.package_data]
* = templates/*

#[options.packages.find]
#where=github_stats_pages
